Get Vote Sites From Pastebin

--- a/oldmanifest.json
+++ b/oldmanifest.json
@@ -16,5 +16,5 @@
         "service_worker": "service-worker.js"
     },
     "host_permissions": ["*://pastebin.com/*"],
-    "permissions": ["activeTab", "scripting"]
+    "permissions": []
 }
